--- a/hal11/public/index.html
+++ b/hal11/public/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="js/script.js" defer></script>
     <link rel="manifest" href="manifest.json">
+    <link rel="shortcut icon" href="icons/favicon-16x16.png" type="image/x-icon">
     <link rel="apple-touch-icon" href="#">
     <script>
         if ('serviceWorker' in navigator) {
@@ -18,43 +19,52 @@
     <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/4.0.0/model-viewer.min.js"></script>
 </head>
 <body>
-    <h1 class="app-heading"><span class="logo">TIGA<small>©</small></span><br>
-        <small>Tværfaglig Innovation Group Aps</small>
-    </h1>
-    <nav>
-        <a href="#">Forside</a>
-        <a href="#">Om</a>
-        <a href="#">Kontakt</a>
-    </nav>
-    <article>
-        <h2>
-            Container Living<br>
-            Bæredygtig byudvikling på Musicon
-        </h2>
-        <h3>Solopvarmet varmtvands-forsyning</h3>
-        <p>TIGA har udviklet revolutionerende energibesparende vandforsyningsrør til varmt vand og fjernvarme. Rørene er hævet over overfladen og eksponeret for sollys. Rørenes særlige mørke materiale absorberer energien fra sollyset og konserverer energien i forhold til det energitab vi oplever med traditionelle rørledninger.</p>
-        <!-- <model-viewer 
-            camera-controls 
-            touch-action="pan-y" 
-            disable-pan 
-            environment-image="media/360-image.hdr" 
-            skybox-image="media/360-image.hdr" 
-            skybox-height="0.05m"
-            orientation="0deg -90deg 0deg"
-            shadow-intensity="2" 
-            max-camera-orbit="auto 90deg auto" 
-            alt="Container Living" 
-            src="media/LegoRacerbil.glb" 
-            style="width:100%; height:250px;" 
-        >
-        </model-viewer> -->
-        <div class="annotation">
-            <p>
-                Med vores patenterede coating af rørene opvarmes vandet af solen, samtidig med energien isoleres indefra.
-            </p>
-            <!-- <img width="150" src="media/coating.png" alt=""> -->
-        </div>
-    </article>
+    <header>
+        <img src="#" alt="">
+        <h1 class="app-heading">Hal 11</h1>
+    </header>
+    <main>
+        <nav>
+            <a href="#"><span></span></a>
+            <a href="#"><span></span></a>
+            <a href="#"><span></span></a>
+        </nav>
+
+        <section id="1">
+
+        </section>
+        
+        <section id="2">
+
+        </section>
+
+        <section id="3">
+            <!-- <model-viewer 
+                camera-controls 
+                touch-action="pan-y" 
+                disable-pan 
+                environment-image="media/360-image.hdr" 
+                skybox-image="media/360-image.hdr" 
+                skybox-height="0.05m"
+                orientation="0deg -90deg 0deg"
+                shadow-intensity="2" 
+                max-camera-orbit="auto 90deg auto" 
+                alt="Container Living" 
+                src="media/LegoRacerbil.glb" 
+                style="width:100%; height:250px;" 
+                >
+            </model-viewer> -->
+
+        </section>
+
+        <section id="4">
+
+        </section>
+
+    </main>
+    <footer>
+        <a href="#1"></a>
+    </footer>
     
 </body>
 </html>
