page navigation added
see where on page you are and click to move

--- a/hal11/public/index.html
+++ b/hal11/public/index.html
@@ -24,21 +24,22 @@
         <h1 class="app-heading">Hal 11</h1>
     </header>
     <main>
-        <nav>
-            <a href="#"><span></span></a>
-            <a href="#"><span></span></a>
-            <a href="#"><span></span></a>
+        <nav id="page-nav">
+            <ul>
+
+            </ul>
         </nav>
 
-        <section id="1">
-
+        <section  class="main__section" id="section-1">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis, nam?</p>
         </section>
         
-        <section id="2">
+        <section class="main__section" id="section-2">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis, nam?</p>
 
         </section>
 
-        <section id="3">
+        <section class="main__section" id="section-3">
             <!-- <model-viewer 
                 camera-controls 
                 touch-action="pan-y" 
@@ -54,10 +55,12 @@
                 style="width:100%; height:250px;" 
                 >
             </model-viewer> -->
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis, nam?</p>
 
         </section>
 
-        <section id="4">
+        <section class="main__section" id="section-4">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis, nam?</p>
 
         </section>
 
