--- a/hal11/public/index.html
+++ b/hal11/public/index.html
@@ -24,22 +24,21 @@
         <h1 class="app-heading">Hal 11</h1>
     </header>
     <main>
-        <nav id="page-nav">
-            <ul>
-
-            </ul>
+        <nav>
+            <a href="#"><span></span></a>
+            <a href="#"><span></span></a>
+            <a href="#"><span></span></a>
         </nav>
 
-        <section  class="main__section" id="section-1">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis, nam?</p>
+        <section id="1">
+
         </section>
         
-        <section class="main__section" id="section-2">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis, nam?</p>
+        <section id="2">
 
         </section>
 
-        <section class="main__section" id="section-3">
+        <section id="3">
             <!-- <model-viewer 
                 camera-controls 
                 touch-action="pan-y" 
@@ -55,12 +54,10 @@
                 style="width:100%; height:250px;" 
                 >
             </model-viewer> -->
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis, nam?</p>
 
         </section>
 
-        <section class="main__section" id="section-4">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis, nam?</p>
+        <section id="4">
 
         </section>
 
