uploaded logos and updated manifest

--- a/hal11/public/index.html
+++ b/hal11/public/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="js/script.js" defer></script>
     <link rel="manifest" href="manifest.json">
-    <link rel="shortcut icon" href="icons/favicon-16x16.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./svg/logo-16x16.svg" type="image/x-icon">
     <link rel="apple-touch-icon" href="#">
     <script>
         if ('serviceWorker' in navigator) {
