LET THERE BE UPDATES!!!

--- a/hal11/index.html
+++ b/hal11/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="public/css/style.css">
     <script src="public/js/script.js" defer></script>
     <link rel="manifest" href="public/manifest.json">
-    <link rel="shortcut icon" href="public/svg/logo-16x16.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="src/svg/logo-16x16.svg" type="image/x-icon">
     <link rel="apple-touch-icon" href="#">
     <script>
         if ('serviceWorker' in navigator) {
@@ -20,8 +20,17 @@
 </head>
 <body>
     <header>
-        <img src="public/img/icons/logo-180x180.png" alt="">
-        <h1 class="app-heading">Hal 11</h1>
+        <div>
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+        </div>
+        <a href="index.html"><img src="src/img/icons/logo-180x180.png" alt=""></a>
+        <div class="diagonal">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+        </div>
     </header>
     <main>
         <nav id="page-nav">
@@ -60,9 +69,5 @@
         </section>
 
     </main>
-    <footer>
-        <a href="#1"></a>
-    </footer>
-    
 </body>
 </html>
