--- a/hal11/index.html
+++ b/hal11/index.html
@@ -19,6 +19,7 @@
     <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/4.0.0/model-viewer.min.js"></script>
 </head>
 <body>
+    <div class="splash-screen"></div>
     <header>
         <div>
             <div class="line"></div>
@@ -49,14 +50,13 @@
                     orientation="0deg -90deg 0deg"
                     shadow-intensity="2" 
                     max-camera-orbit="auto 90deg auto" 
-                    alt="Container Living" 
-                    src="public/img/models/house.glb"  
-                    style="height: 100%; width: 100%;"
+                    alt="forsamlingshuset" 
+                    src="public/img/models/building.glb"  
                 >
                 </model-viewer>
             </div>
             <div class="--background models">
-                <model-viewer 
+                <!-- <model-viewer 
                     class="model-viewer"
                     camera-controls 
                     touch-action="pan-y" 
@@ -66,12 +66,12 @@
                     max-camera-orbit="auto 90deg auto" 
                     alt="Lego race car" 
                     src="public/img/models/LegoRacerbil.glb" 
-                    style="height: 100%; width: 100%;"
                 >
-                </model-viewer>
+                </model-viewer> -->
+                <img src="public/img/models/Image1.png" alt="" class="model-viewer">
             </div>
             <div class="--background models">
-                <model-viewer 
+                <!-- <model-viewer 
                     class="model-viewer"
                     camera-controls 
                     touch-action="pan-y" 
@@ -80,29 +80,17 @@
                     max-camera-orbit="auto 90deg auto" 
                     alt="concept for pipes" 
                     src="public/img/models/pipes.glb" 
-                    style="height: 100%; width: 100%;"
                 >
-                </model-viewer>
+                </model-viewer> -->
+                <img src="public/img/models/Image3.png" alt="" class="model-viewer">
+
             </div>
-            <!-- <model-viewer 
-                camera-controls 
-                touch-action="pan-y" 
-                disable-pan 
-                environment-image="media/360-image.hdr" 
-                skybox-image="media/360-image.hdr" 
-                skybox-height="0.05m"
-                orientation="0deg -90deg 0deg"
-                shadow-intensity="2" 
-                max-camera-orbit="auto 90deg auto" 
-                alt="Container Living" 
-                src="media/LegoRacerbil.glb" 
-                style="width:100%; height:250px;" 
-                >
-            </model-viewer> -->
         </section>
         
         <section class="main__section" id="section-2">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis, nam?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi vero reprehenderit aperiam explicabo debitis! Obcaecati eos necessitatibus facere voluptas maxime, deserunt pariatur sapiente hic tenetur vel? Eligendi, illo, temporibus cupiditate iste veniam quidem nam accusamus quam ex</p>
+            <p>illum neque voluptatum tempora. Error architecto deserunt eos modi, eligendi tenetur incidunt molestiae qui officiis quos alias earum! Repellat, iste maxime aperiam provident nostrum eligendi labore accusantium nihil illum laborum facere delectus, esse, quos ab tempore.</p>
+            <p>Nostrum iste eum laboriosam doloribus asperiores! Perspiciatis ullam illo, sit odio, assumenda repudiandae nostrum voluptates aperiam iusto optio eligendi aut cumque libero natus ipsum ipsa reprehenderit itaque.</p>
 
         </section>
 
